objects/VoucherCode__c.object
<CustomObject>
    <fields>
        <fullName>LoyaltyProgramMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The loyalty program member who has been issued the voucher.</description>
        <label>Loyalty Program Member</label>
        <referenceTo>LoyaltyProgramMember</referenceTo>
        <relationshipLabel>Voucher Codes</relationshipLabel>
        <relationshipName>Voucher_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequentialCounterNumber__c</fullName>
        <description>The incremental token number associated with the voucher code.</description>
        <label>Sequential Voucher Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoucherCodeCategory__c</fullName>
        <description>The category for which the voucher code is generated.</description>
        <label>Voucher Code Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Redemption</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherCodeCorrelationId__c</fullName>
        <description>The correlation ID of the voucher code category.</description>
        <label>Voucher Code Correlation ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherCodeStatus__c</fullName>
        <description>The status of the voucher code.</description>
        <label>Voucher Code Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherCodeType__c</fullName>
        <description>The type of code assigned to the member.</description>
        <label>Voucher Code Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scan Code</fullName>
                </value>
                <value>
                    <fullName>Voucher Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoucherCode__c</fullName>
        <description>The voucher code issued to a loyalty program member. This is derived using the voucher code prefix, voucher code suffix, and incremental/sequential voucher number.</description>
        <formula>VoucherDefinitionId__r.VoucherCodePrefix__c + TEXT( SequentialCounterNumber__c ) + VoucherDefinitionId__r.VoucherCodeSuffix__c</formula>
        <label>Voucher Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherDefinitionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The parameters that define the voucher code assigned to the member.</description>
        <label>Voucher Definition</label>
        <referenceTo>VoucherDefinition</referenceTo>
        <relationshipLabel>Voucher Codes</relationshipLabel>
        <relationshipName>Voucher_Codes1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Voucher Code</label>
    <listViews>
        <fullName>All_Voucher_Code</fullName>
        <columns>NAME</columns>
        <columns>SequentialCounterNumber__c</columns>
        <columns>LoyaltyProgramMember__c</columns>
        <columns>VoucherCode__c</columns>
        <columns>VoucherCodeCategory__c</columns>
        <columns>VoucherCodeCorrelationId__c</columns>
        <columns>VoucherCodeStatus__c</columns>
        <columns>VoucherDefinitionId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Voucher Code</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>